--- a/src/app/pages/shop/shoes/shoes.component.html
+++ b/src/app/pages/shop/shoes/shoes.component.html
@@ -4,7 +4,7 @@
   @let categories = categories$ | async;
   @let products = products$ | async;
 
-  <h1 class="heading">New Arrivals</h1>
+  <h1 class="heading">Shop Shoes</h1>
 
   <div class="grid md:grid-cols-[1fr_3fr_1fr] lg:grid-cols-[1fr_4fr_1fr] gap-8">
     <div class="order-1">
