--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -18,20 +18,10 @@
         </div>
         <!-- right -->
         <div class="flex justify-end items-center gap-3">
-          <div class="dropdown dropdown-end">
-            <div tabindex="0" role="button" class="btn hover:bg-base-300 btn-circle">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-            </div>
-            <div tabindex="0" class="card card-compact dropdown-content bg-base-200 z-[1] mt-3 w-52">
-              <div class="card-body">
-                <span class="text-lg font-bold">8 Items</span>
-                <span class="text-info">Subtotal: $999</span>
-                <div class="card-actions">
-                  <button class="btn btn-primary btn-block">View cart</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <button class="btn hover:bg-base-300 rounded-full" routerLink="/cart">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
+            <span class="bg-primary text-white rounded-full p-1">{{ cart().quantity }}</span>
+          </button>
           <div class="hidden lg:block">
             <a class="btn hover:bg-base-300 btn-circle" routerLink="/search">
               <i class="text-lg fa-solid fa-magnifying-glass"></i>
@@ -68,6 +58,9 @@
     <label for="my-drawer-3" aria-label="close sidebar" class="drawer-overlay"></label>
     <div class="bg-base-100 h-full w-60 p-4">
       <div class="flex justify-end items-center gap-4 mb-8">
+        <a class="btn hover:bg-base-300 btn-circle" routerLink="/search">
+          <i class="text-lg fa-solid fa-magnifying-glass"></i>
+        </a>
         @defer {
           <app-user-button />
         }
