--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -3,5 +3,9 @@
 
   <p class="text-lg text-center mb-10">Page you are looking for is removed or does not exist.</p>
 
-  <button class="btn-primary mx-auto" routerLink="/shop">Visit Shop</button>
+  <div class="grid max-w-xs gap-4 mx-auto">
+    <button class="btn btn-primary" routerLink="/new-arrivals">new arrivals</button>
+    <button class="btn btn-primary" routerLink="/">go home</button>
+  </div>
+
 </section>
