--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,88 @@
-<p>login works!</p>
+<section>
+  <div class="grid md:grid-cols-[3fr_2fr] gap-6 md:gap-40 max-w-6xl mx-auto">
+    <div>
+      <h1 class="heading text-left">{{ heading() }}</h1>
+      <p class="text-xl">Login or sign up to save orders and payment methods for next time!</p>
+    </div>
+    
+    <div class="grid gap-6">
+      <div class="grid gap-2">
+        @if (user(); as user) {
+          <div class="bg-base-300 hover:bg-base-200 cursor-pointer px-4 py-2" routerLink="/profile" (click)="error.set(null)">
+            <span>Already logged in as {{ user.displayName}}</span>
+          </div>
+        }
+
+        @if (error()) {
+          <div class="text-red-500 cursor-pointer" (click)="error.set(null)">
+            <span>{{ error() }}</span>
+          </div>
+        }
+
+        <form (ngSubmit)="submit()" class="grid gap-4">
+          @if (isSignUpForm()) {
+            <label class="form-control">
+              <div class="label">
+                <span class="label-text">Enter full name</span>
+              </div>
+              <input type="text" class="input input-primary input-bordered" name="displayName" [(ngModel)]="state().credentials.displayName" placeholder="John Wick"/>
+            </label>
+          }
+
+          <label class="form-control">
+            <div class="label">
+              <span class="label-text">Email address</span>
+            </div>
+            <input type="email" class="input input-primary input-bordered" name="email" [(ngModel)]="state().credentials.email" placeholder="john.wick@example.com"/>
+          </label>
+          
+          @if (isLoginForm() || isSignUpForm()) {
+            <label class="form-control">
+              <div class="label">
+                <span class="label-text">Enter password</span>
+              </div>
+              <input type="password" class="input input-primary input-bordered" name="password" [(ngModel)]="state().credentials.password" placeholder="password"/>
+            </label>
+          }
+
+          <div class="text-center">
+            @if (!isSignUpForm()) {
+              <a class="cursor-pointer hover:underline" (click)="setFormType('SIGN_UP')">Create new Account</a>
+            }
+            @if (isResetPasswordForm()) {
+              <span>&nbsp; • &nbsp;</span>
+            }
+            @if (!isLoginForm()) {
+              <a class="cursor-pointer hover:underline" (click)="setFormType('LOGIN')">Already have an account?</a>
+            }
+            @if (!isResetPasswordForm()) {
+              <span>&nbsp; • &nbsp;</span>
+            }
+            @if (!isResetPasswordForm()) {
+              <a class="cursor-pointer hover:underline" (click)="setFormType('RESET_PASSWORD')">Forgot password?</a>
+            }
+          </div>
+
+          <button type="submit" class="btn btn-primary py-3 ">
+            <span>{{ heading() }}</span>
+          </button>
+        </form>
+      </div>
+      
+      <!-- divider -->
+      <div class="h-0 w-40 mx-auto border-[1px] border-primary opacity-20 "></div>
+      
+      <button (click)="googleLogin()" class="btn hover:bg-base-300 w-full py-3 custom-shadow ">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="26" height="26">
+          <path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"/>
+          <path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"/>
+          <path fill="#4CAF50" d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"/>
+          <path fill="#1976D2" d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"/>
+        </svg>
+        <span>Continue using Google</span>  
+      </button>
+    </div>
+  </div>
+</section>
+
+
